2010-01-31 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Fix broken pipe issue (trac ticket #34).

	* scripts/clush.py: Fix unhandled NodeSet parse error (trac ticket #36).

	* scripts/clush.py: Display uncompleted nodes on keyboard interrupt.

2010-01-29 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Return some error code when -S -u TIMEOUT is used
	and some command timeout occurred (trac ticket #48).

	* scripts/clush.py: Display output messages on KeyboardInterrupt (trac
	ticket #22).

	* tests/TaskThreadJoinTest.py: Added test cases for task.join().

	* tests/TaskThreadSuspendTest.py: Added test cases for
	task.suspend().

	* tests/TaskPortTest.py: Added test cases for task.port().

	* Task.py: Improved features in multithreaded environments thanks
	to new port feature: abort(), suspend(), resume(), schedule(), etc.
	are now thread-safe (trac ticket #21).

	* Worker/EngineClient.py: Added port feature, a way to communicate between
	different tasks.

2009-12-09 A. Degremont  <aurelien.degremont@cea.fr>

	* scripts/clush.py: Add -X flag to exclude node groups.
	  Node flags -w/-x/-g/-X can now be specified multiple times.

2009-12-17 S. Thiell <stephane.thiell@cea.fr>

	* Engine/Factory.py: Add engine automatic selection mechanism (trac
	ticket #10).

	* Task.py: Add task_terminate() function for convenience.

2009-12-15 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Fix clush -q/--quiet issue again!

2009-12-09 A. Degremont  <aurelien.degremont@cea.fr>

	* scripts/nodeset.py: Protect --separator from code injection and
	handle gracefully incorrect separtor.

2009-12-09 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.2 beta 1 released.

	* scripts/clush.py and library: Add -p option when using --copy to
	preserve file modification times and modes.

	* scripts/clush.py: Fix clush -q/--quiet issue.

	* scripts/nodeset.py: Add separator option to nodeset
	--expand with -S <string> (trac ticket #39).
