@@ -107,3 +107,4 @@ ClusterShell was first created for Shine, the Lustre Administration Utility:
 
 Stephane Thiell <stephane.thiell@cea.fr>
 
+CEA/DAM 2010
